[project]
name = "comfyui-yetanothersafetychecker"
description = "Just a simple node to filter out NSFW outputs. This node utilizes [a/AdamCodd/vit-base-nsfw-detector](https://huggingface.co/AdamCodd/vit-base-nsfw-detector) to score the outputs. I chose this model because it's small, fast, and performed very well in my testing. Nudity tends to be scored in the 0.95+ range, but I've set the default to 0.8 as a safe baseline."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/BetaDoggo/ComfyUI-YetAnotherSafetyChecker"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-YetAnotherSafetyChecker"
Icon = ""
